upgrades new media grid etc

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -41,4 +41,12 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <footer class="app-footer">
+    <a class="copyright" href="http://prabhumurthy.com" target="_new">
+      &copy; 2020, prabhumurthy.com
+    </a>
+    <a class="powered" href="http://themoviedb.org">
+      powered by themoviedb.org
+    </a>
+  </footer>
 </html>
