updates for the day

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -42,10 +42,14 @@
     -->
   </body>
   <footer class="app-footer">
-    <a class="copyright" href="http://prabhumurthy.com" target="_new">
+    <a class="copyright" href="http://prabhumurthy.com" target="_blank">
       &copy; 2020, prabhumurthy.com
     </a>
-    <a class="powered" href="http://themoviedb.org">
+    <a class="github" href="http://github.com/prabhuignoto" target="_blank">
+      <img src="github.svg" />
+      <span>Github</span>
+    </a>
+    <a class="powered" href="http://themoviedb.org" target="_blank">
       powered by themoviedb.org
     </a>
   </footer>
